--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 	</head>
 	<body>
 		<h1>Hello Web Tech</h1>
+		<p>It's the index</p>
+		<a href=Week2/Week2.html>Week2</a>
+		<a href=Week3/Week3.html>Week2</a>
 	</body>
 </html>
