--- a/Week2/Week2.html
+++ b/Week2/Week2.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Hello Week 2</h1>
-		<img src ../Images/sadman.jpg />
+		<img src="../Images/sadman.jpg" />
 	</body>
 </html>
