--- a/Week2/Week2.html
+++ b/Week2/Week2.html
@@ -4,7 +4,7 @@
 		<title>SET08101 - Web Tech</title>
 	</head>
 	<body>
-		<h1>Hello Week 2</h1>
-		<img src="../Images/sadman.jpg" />
+		<h1>Hello Week 2, time to die</h1>
+		<img src="../Images/ded.webp" />
 	</body>
 </html>
