--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<h1>Hello Web Tech</h1>
 		<p>It's the index</p>
 		<a href=Week2/Week2.html>Week2</a>
-		<a href=Week3/Week3.html>Week2</a>
+		<a href=Coursework_test/coursework_test.html>Coursework Test</a>
 	</body>
 </html>
