--- a/Coursework_test/coursework_test.html
+++ b/Coursework_test/coursework_test.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+	<link rel = "stylesheet" href = "Coursework_text.css" type = "text/css" />
 	<head>
-		<title>Coursework</title>
+		<style>
+			body {
+    				background-image: url("../Images/blue.webp");
+    				background-size: 100% 100%;
+    			}
+		</style>
+		<title>Homepage</title>
 	</head>
 	<body>
-		<h1>This is a testing ground for my coursework ideas </h1>
-		<img src="../Images/thumb.jpg" />
+		<h1>I'm stuck in a website, get me out of here!</h1>
+		<h2>Welcome to "I'm stuck in a website, get me out of here!" the hit game you've never heard of!</h2>
+		<img src="../Images/Crack Black Dash.png" class="center" class="parent" id = "img2" />
+		<img src="../Images/Impact Black Dash.png" class="center" class="parent" id = "img" />
+		<a href="../Level1/level1.html"><button type="button">Start</button></a> 
+		<a href="../Level2/level2.html"><button type="button">Start</button></a>
+		<p>You are a web technician who is doing routine checks of all the sites the company you work for uses but you notice the site is being altered in real time, there's a person stuck in this website!
+		<br> Only you can get them out! There is no clear explaination as to why this person is stuck inside of this website, 
+		   but you're the only one who has access to the site, you have to save him before it's too late. <br>  </p>
 	</body>
 </html>
