--- a/Level1/level1.html
+++ b/Level1/level1.html
@@ -1,12 +1,165 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Level 1</title>
+      </head>
     <link rel = "stylesheet" href = "level1.css" type = "text/css" />
-    <a href="../Coursework_test/coursework_test.html"><button type="button">Return to Homepage</button></a>
-    
-<div class = "type">
-<p class = "intro"> hey you, yes you currently looking at this site can you see this?</p>
-</div>
-<button class = "choice"> Nope, I can't see anything </button>
-<button class = "choice"> Yeah, I can </button>
+    <a href="../Coursework/Coursework.html"><button type="button">Return to Homepage</button></a>
+
+<div id="output">
+  </div>
+  <div id="dialogue">
+    <div class="type">
+    <p id="npcDialogue">hey you, yes you currently looking at this site can you see this?</p>
+    </div>
+    <div class="button-container">
+      <button class="button" onclick="respond('Y')">Yeah, I can</button>
+      <button class="button" onclick="respond('N')">Nope, I cannot see anything</button>
+    </div>
+  </div>
+  
+  <div id="result"></div>
+
+  <script>
+    const output = document.getElementById('output');
+    const npcDialogue = document.getElementById('npcDialogue');
+    const dialogue = document.getElementById('dialogue');
+    const result = document.getElementById('result');
+
+    function print(text) {
+      result.innerHTML = '<p>' + text + '</p>';
+    }
+
+    function respond(response) {
+      npcDialogue.textContent = response;
+      switch (response) {
+        case 'Y':
+          showYesOptions();
+          break;
+        case 'N':
+          showNopeOptions();
+          break;
+        case 'Where':
+          showWhereOptions();
+          break;
+        case 'Who':
+          showWhoOptions();
+          break;
+        case 'How':
+          showHowOptions();
+          break;
+        case 'Help':
+          showTrustOptions();
+          break;
+        case 'Trust': 
+          print('Thank you, now please hit the button!');
+          showTrustButton();
+          break;
+        case 'No':
+          showNoOptions();
+        case 'TrustButton':
+          showTrustButton();
+          break;
+        default:
+          
+          break;
+      }
+    }
+
+    function showYesOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">Oh great! please help me, i am stuck in here.</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('Where')">Stuck in where?</button>
+          <button class="button" onclick="respond('Who')">Who are you exactly?</button>
+        </div>
+      `;
+    }
+
+    function showNopeOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">Haha, very funny. Can you please help me out of here?</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('Who')">Who are you?</button>
+          <button class="button" onclick="respond('Where')">Out of where?</button>
+        </div>
+      `;
+    }
+
+    function showWhereOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">The website you ass, is it not obvious?</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('How')">How the hell did you do that?</button>
+          <button class="button" onclick="respond('Help')">How can I help?</button>
+        </div>
+      `;
+    }
+
+    function showWhoOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">do you really care about that, all you need to know is my legs hurt.</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('How')">How the hell did you do that?</button>
+          <button class="button" onclick="respond('Help')">How can I help?</button>
+        </div>
+      `;
+    }
+
+    function showHowOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">Do you think I would keep that a secret if I knew? I have no clue why i am stuck here but I am.</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('Help')">Okay I can help you, what can I do?</button>
+          <button class="button" onclick="respond('Help')">How can I help?</button>
+        </div>
+      `;
+    }
+
+    function showTrustOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">You see that button right in the middle of the screen? Click it and then something should happen.</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('TrustButton')">Okay, I trust you</button>
+          <button class="button" onclick="respond('No')">Why should I trust you and hit a random button?</button>
+        </div>
+      `;
+    }
+
+    function showNoOptions() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">What other option do you have? Just do it please, I really would prefer not to be in here.</p>
+      </div>
+        <div class="button-container">
+          <button class="button" onclick="respond('TrustButton')">Fine, I guess I trust you</button>
+          <button class="button" onclick="respond('Secret')">Go to hell, i am not gonna help some random guy</button>
+        </div>
+      `;
+    }  
+
+    function showTrustButton() {
+      dialogue.innerHTML = `
+      <div class="type">
+        <p id="npcDialogue">Thank you, now please hit the button!</p>
+      </div>
+        <div class="button-container">
+         <a href="../Level2/level2.html"><button class="button endbutton">click me!!!</button></a>
+        </div>
+      `;
+    }
+  </script>
 
 </html>
