--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	</head>
 	<body>
 		<h1>Hello Web Tech</h1>
-		<p>It's the index</p>
-		<a href=Week2/Week2.html>Week2</a>
-		<a href=Coursework_test/coursework_test.html>Coursework Test</a>
+		<p>Sam McGhies Web Tech</p>
+		<a href=Coursework/Coursework.html>Coursework</a>
 	</body>
 </html>
